2003.11.27 TADA Tadashi <sho@spc.gr.jp>
	* index.rb, update.rb: no 'Content-Type' in error message running on mod_ruby.

2003.11.21 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: Url returned by base_url ends with '/'.

2003-11-21  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary.rb: remove tail '/' of base_url.

2003.11.19 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: import base_url method from RWiki.

2003.11.18 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: run Plugin#apply_plugin under $SAFE = 4 when secure mode.

2003.11.17 TADA Tadashi <sho@spc.gr.jp>
	* dot.htaccess: move comment about YYYYMMDD.html access to html_anchor.rb plugin.
	* tdiary/lang/ja.rb: remove decoding of charref.
	* plugin/00default.rb: remove sub from hostname in comment_mail_send.

2003.11.14 TADA Tadashi <sho@spc.gr.jp>
	* misc/jtime.rb: removed. use plugin/jdate.rb.

2003.11.13 TADA Tadashi <sho@spc.gr.jp>
	* release 1.5.6.

2003.11.10 TADA Tadashi <sho@spc.gr.jp>
	* skel/update.rhtml*: add subtitle in update form.

2003.11.06 zunda <zunda at freeshell.org>
	* misc/style/emptdiary/README.rd and README.rd.en: emptdiary -> emptDiary

2003.11.06 TADA Tadashi <sho@spc.gr.jp>
	* plugin/{ja,en}/00default.rb: looks up style documents in docs.tdiary.org wiki.

2003.11.05 Junichiro Kita <kita@kitaj.no-ip.com>
	* misc/style/wiki/README*: add document for kw plugin.

2003.11.05 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: rescue SyntaxError and raise BadStyleError when bad style is specified.

2003.11.03 Junichiro Kita <kita@kitaj.no-ip.com>
	* ske/category.rhtml: stripped_subtitle -> stripped_subtitle_to_html.

2003.10.29 zunda <zunda at freeshell.org>
	* tdiary.rb: passes yield separate values instead of an Array to follow behavior of yield [ruby-dev:21276]

2003.10.28 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: dup string in apply_plugin.
	* doc/HOWTO-make-io.rd: add documents for *_to_html.
	* misc/style/etdiary/etdiary_style.rb, misc/style/rd/rd_style.rb,