@@ -1,5 +1,6 @@
 2003.11.27 TADA Tadashi <sho@spc.gr.jp>
 	* index.rb, update.rb: no 'Content-Type' in error message running on mod_ruby.
+	* plugin/01sp.rb: sp.path can terminate by '/'.
 
 2003.11.21 Junichiro Kita <kita@kitaj.no-ip.com>
 	* tdiary.rb: Url returned by base_url ends with '/'.
